--- a/ng2/package.json
+++ b/ng2/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "jquery": "^3.2.1",
+    "ng-style": "^1.0.0",
     "rxjs": "^5.1.0",
     "underscore": "^1.8.3",
     "zone.js": "0.8.12"
