--- a/ng2/package.json
+++ b/ng2/package.json
@@ -21,9 +21,11 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@types/d3": "^4.11.0",
     "@types/underscore": "^1.8.3",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "d3": "^4.11.0",
     "jquery": "^3.2.1",
     "ng-style": "^1.0.0",
     "rxjs": "^5.1.0",
