--- a/web/Gemfile
+++ b/web/Gemfile
@@ -1,10 +1,10 @@
 source 'https://rubygems.org'
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
-gem 'rails', '4.0.1'
+gem 'rails', '~> 4.2.8'
 
 # Use mysql as the database for Active Record
-gem 'mysql2', '0.3.17'
+gem 'mysql2'
 
 # Use SCSS for stylesheets
 # gem 'sass-rails', '~> 4.0.0'
