rename base component to base directive

--- a/ng2/package.json
+++ b/ng2/package.json
@@ -28,6 +28,7 @@
     "d3": "^4.11.0",
     "jquery": "^3.2.1",
     "ng-style": "^1.0.0",
+    "node-sass": "^4.7.2",
     "rxjs": "^5.1.0",
     "underscore": "^1.8.3",
     "zone.js": "0.8.12"
