--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "doc": "doc",
     "test": "test"
   },
-  "dependencies": {},
+  "dependencies": {
+    "angular-sanitize": "^1.7.4"
+  },
   "devDependencies": {
     "babel-preset-es2015": "^6.3.13",
     "del": "^2.0.2",
