--- a/modules/LCDtouch_V3/ilitek/Makefile
+++ b/modules/LCDtouch_V3/ilitek/Makefile
@@ -18,7 +18,7 @@ install:
 	sync
 
 install_mod:
-	cp ilitek_aimv20.ko /lib/modules/$(shell uname -r)/kernel/drivers/input$
+	cp ilitek_aimv20.ko /lib/modules/$(shell uname -r)/kernel/drivers/input/touchscreen
 	depmod -a
 	echo ilitek_aimv20 > /etc/modules-load.d/ilitek_aimv20.conf
 	sync
