Reenable julia.log rotation

--- a/devops/device/logrotate/logrotate.conf
+++ b/devops/device/logrotate/logrotate.conf
@@ -81,4 +81,14 @@ include /etc/logrotate.d
     copytruncate
 }
 
+/var/log/julia.log {	
+    rotate 2	
+    daily	
+    missingok	
+    notifempty	
+    delaycompress	
+    compress	
+    copytruncate	
+}	
+
 # system-specific logs may be configured here
