add in-progress exp page in touch app

--- a/touchapp/package.json
+++ b/touchapp/package.json
@@ -21,11 +21,14 @@
     "@angular/platform-browser": "^6.0.2",
     "@angular/platform-browser-dynamic": "^6.0.2",
     "@angular/router": "^6.0.2",
+    "@ng-bootstrap/ng-bootstrap": "^2.2.2",
     "@types/d3": "^4.11.0",
+    "bootstrap": "^4.0.0",
     "core-js": "^2.5.4",
     "d3": "^4.11.0",
     "jquery": "^3.6.0",
     "ng-style": "^1.0.0",
+    "ngx-cookie": "^4.1.2",
     "rxjs": "^6.0.0",
     "simple-keyboard": "^2.32.0",
     "underscore": "^1.13.1",
